<resources>
    <string name="app_name">trkpt</string>
    <string name="tab_map">Record</string>
    <string name="tab_tracks">History</string>
    <string name="tab_settings">Settings</string>
    <string name="notification_title_trackbook_running">Recording</string>
    <string name="notification_title_trackbook_not_running">Stopped</string>
    <string name="notification_pause">Stop</string>
    <string name="notification_resume">Record</string>
    <string name="notification_show">Show</string>
    <string name="notification_channel_recording_name">Movement Recording State</string>
    <string name="notification_channel_recording_description">Display duration and distance. Option to pause movement recording.</string>
    <string name="snackbar_message_location_offline">Location is turned off. Trackbook will not work.</string>
    <string name="snackbar_message_location_permission_denied">Location permission not granted. Trackbook will not work.</string>
    <string name="button_delete">Delete</string>
    <string name="button_pause">Stop</string>
    <string name="button_save">Save</string>
    <string name="button_start">Record</string>
    <string name="button_not_ready">Database not set up.</string>
    <string name="dialog_delete_current_recording_message">Discard current recording?</string>
    <string name="dialog_delete_current_recording_button_discard">Discard</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_generic_button_okay">OK</string>
    <string name="dialog_generic_details_button">Show details</string>
    <string name="dialog_rename_track_button">Rename</string>
    <string name="dialog_rename_track_input_hint">Name this track</string>
    <string name="dialog_share_gpx">Share GPX file with</string>
    <string name="dialog_yes_no_positive_button_default">Yes</string>
    <string name="dialog_yes_no_positive_button_delete_recording">Delete</string>
    <string name="dialog_yes_no_positive_button_delete_non_starred">Delete</string>
    <string name="dialog_yes_no_message_delete_non_starred">Delete all non-starred recordings? This action cannot be undone.</string>
    <string name="dialog_yes_no_message_delete_recording">Delete these trackpoints?</string>
    <string name="toast_message_copied_to_clipboard">Copied to clipboard.</string>
    <string name="toast_message_elevation_info">Hint: The accuracy of elevation data depends on your device. The uphill and downhill elevation of the whole route is measured.</string>
    <string name="toast_message_install_file_helper">Unable to save. Please install a file manager first.</string>
    <string name="toast_message_poi_added">Point of interest marker added.</string>
    <string name="toast_message_poi_removed">Point of interest marker removed.</string>
    <string name="toast_message_save_gpx">Saving recording as GPX.</string>
    <string name="marker_description_time">Time</string>
    <string name="marker_description_accuracy">Accuracy</string>
    <string name="statistics_sheet_p_trackid">Track ID:</string>
    <string name="statistics_sheet_p_distance">Total distance:</string>
    <string name="statistics_sheet_p_steps">Steps taken:</string>
    <string name="statistics_sheet_p_steps_no_pedometer">pedometer not available</string>
    <string name="statistics_sheet_p_waypoints">Recorded trackpoints:</string>
    <string name="statistics_sheet_p_duration">Moving duration:</string>
    <string name="statistics_sheet_p_recording_paused">Rest duration:</string>
    <string name="statistics_sheet_p_recording_start">First point:</string>
    <string name="statistics_sheet_p_recording_stop">Last point:</string>
    <string name="statistics_sheet_p_max_altitude">Highest elevation:</string>
    <string name="statistics_sheet_p_min_altitude">Lowest elevation:</string>
    <string name="statistics_sheet_p_positive_elevation">Elevation (uphill):</string>
    <string name="statistics_sheet_p_negative_elevation">Elevation (downhill):</string>
    <string name="statistics_sheet_p_velocity">Average velocity:</string>
    <string name="quick_settings_tile_title_default">Recording</string>
    <string name="quick_settings_tile_title_start">Start Recording</string>
    <string name="quick_settings_tile_title_pause">Pause Recording</string>
    <string name="layout_onboarding_description_app_icon">Trackbook App Icon</string>
    <string name="track_list_onboarding_h1_part_1">Your recorded tracks</string>
    <string name="track_list_onboarding_h1_part_2">… will show up here.</string>
    <string name="track_list_p_element_statistics">Total Distance Recorded</string>
    <string name="pref_about_title">About</string>
    <string name="pref_app_version_summary">Version</string>
    <string name="pref_app_version_title">App version</string>
    <string name="pref_accuracy_threshold_summary">Discard location fixes with an accuracy larger than (meters):</string>
    <string name="pref_accuracy_threshold_title">Accuracy Threshold</string>
    <string name="pref_altitude_smoothing_value_summary" translatable="false">Number of trackpoints used to smooth the elevation curve.</string>
    <string name="pref_altitude_smoothing_value_title" translatable="false">Altitude Smoothing</string>
    <string name="pref_auto_export_interval_summary">Automatically export GPX file after this many hours.</string>
    <string name="pref_device_id_summary">A unique ID to distinguish tracks recorded across multiple devices.</string>
    <string name="pref_database_folder_summary">Directory to contain your database file. You could use Syncthing to sync with your PC.</string>
    <string name="pref_auto_export_interval_title">Auto Export Interval</string>
    <string name="pref_device_id">Device ID</string>
    <string name="pref_database_folder">Database directory</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_delete_non_starred_summary">Delete all recordings in \"Tracks\" that are not starred.</string>
    <string name="pref_delete_non_starred_title">Delete Non-Starred Recordings</string>
    <string name="pref_general_title">Settings</string>
    <string name="pref_maintenance_title">Maintenance</string>
    <string name="pref_location_gps_title">Use GPS location</string>
    <string name="pref_location_gps_summary_on">GPS location enabled.</string>
    <string name="pref_location_gps_summary_off">GPS location disabled.</string>
    <string name="pref_location_network_title">Use network location</string>
    <string name="pref_location_network_summary_on">Network location enabled.</string>
    <string name="pref_location_network_summary_off">Network location disabled.</string>
    <string name="pref_imperial_measurement_units_summary_metric">Currently using metric units (Kilometer, Meter).</string>
    <string name="pref_imperial_measurement_units_summary_imperial">Currently using imperial units (Miles, Feet).</string>
    <string name="pref_imperial_measurement_units_title">Imperial measurements</string>
    <string name="pref_omit_rests_on">Trackpoints will not be recorded if they are too close to your recent trackpoints.</string>
    <string name="pref_omit_rests_off">All trackpoints will be recorded, even while standing still.</string>
    <string name="pref_omit_rests_title">Omit repeated points</string>
    <string name="pref_report_issue_summary">Report bugs and suggest improvements on GitHub.</string>
    <string name="pref_report_issue_title">Report Issue</string>
    <string name="pref_reset_advanced_summary">Reset advanced settings to defaults.</string>
    <string name="pref_reset_advanced_title">Reset</string>
    <string name="pref_theme_selection_mode_dark">Dark mode</string>
    <string name="pref_theme_selection_mode_device_default">Same as device</string>
    <string name="pref_theme_selection_mode_light">Light mode</string>
    <string name="pref_theme_selection_summary">Current theme:</string>
    <string name="pref_theme_selection_title">App theme</string>
    <string name="pref_show_debug_title">Show debug info</string>
    <string name="pref_show_debug_summary_on">Debug info shown on map screen. Device will vibrate when woken by motion sensors.</string>
    <string name="pref_show_debug_summary_off">Debug info hidden.</string>
    <string name="pref_disable_battery_optimization_title">Disable battery optimization</string>
    <string name="pref_disable_battery_optimization_summary">If your device kills the app, you can give this a try.</string>
    <string name="pref_source_code_title">Source code</string>
    <string name="pref_source_code_summary">Available on github, gitlab, and codeberg.</string>
    <string name="pref_fork_notice_title">trkpt is a fork of Trackbook</string>
    <string name="pref_fork_notice_summary">Thank you y20k.</string>
    <string name="pref_copyright_notice_title">Map data</string>
    <string name="pref_copyright_notice_summary">© OpenStreetMap contributors.</string>
    <string name="pref_max_accuracy_title">Filter inaccurate points</string>
    <string name="pref_max_accuracy_summary">Points with accuracy worse than this will be hidden (but still saved). Small numbers are highly accurate.</string>
    <string name="abbreviation_hours">hrs</string>
    <string name="abbreviation_minutes">min</string>
    <string name="abbreviation_seconds">sec</string>
    <string name="descr_button_delete">Discard recording</string>
    <string name="descr_button_location">Center on current location</string>
    <string name="descr_button_zoom_out">Zoom out</string>
    <string name="descr_button_zoom_in">Zoom in</string>
    <string name="descr_button_pause">Stop recording</string>
    <string name="descr_button_resume">Resume recording</string>
    <string name="descr_button_save">Save recording</string>
    <string name="descr_button_start">Start recording</string>
    <string name="descr_map_current_track">Mapping of current track</string>
    <string name="descr_map_last_track">Mapping of last track</string>
    <string name="descr_fab_main_start">Start recording</string>
    <string name="descr_fab_sub_menu_button_save">Save recording</string>
    <string name="descr_fab_sub_menu_button_clear">Clear recording</string>
    <string name="descr_fab_sub_menu_button_resume">Resume recording</string>
    <string name="descr_fab_location">Center on current location</string>
    <string name="descr_mark_starred_button">Star track</string>
    <string name="descr_quick_settings_tile_title_start">Start Recording</string>
    <string name="descr_quick_settings_tile_title_pause">Pause Recording</string>
    <string name="descr_quick_settings_tile_title_stop">Stop Recording</string>
    <string name="descr_statistics_sheet_delete_button">Delete track</string>
    <string name="descr_statistics_sheet_edit_button">Edit track</string>
    <string name="descr_statistics_sheet_save_button">Save track as GPX</string>
    <string name="sample_text_track_data" translatable="false">23.0 km • 5 hrs 23 min 42 sec</string>
    <string name="sample_text_track_name" translatable="false">July 20, 1969</string>
    <string name="sample_text_default_data" translatable="false">track data missing</string>
    <string name="sample_text_default_total_distance" translatable="false">6357.23 km</string>
    <string name="sample_text_default_live_statistics_distance" translatable="false">23.0 km</string>
    <string name="sample_text_default_live_statistics_duration" translatable="false">5:23</string>
</resources>