<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_dodgeInsetEdges="bottom">

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/descr_map_current_track"
            android:visibility="visible" />

        <!-- BUTTON SAVE -->

        <!-- BUTTON CLEAR -->

        <!-- MAIN BUTTON -->

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/descr_button_start"
            android:text="@string/button_start"
            android:textColor="@color/recording_management_buttons_icon"
            app:backgroundTint="@color/recording_management_buttons_background"
            app:icon="@drawable/ic_fiber_manual_record_inactive_24dp"
            app:iconTint="@color/recording_management_buttons_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- CURRENT LOCATION BUTTON -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/location_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/descr_button_location"
            android:src="@drawable/ic_current_location_24dp"
            app:backgroundTint="@color/location_button_background"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/location_button_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoom_out_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/descr_button_zoom_out"
            android:src="@drawable/ic_zoom_out_24dp"
            app:backgroundTint="@color/location_button_background"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/location_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/location_button_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoom_in_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/descr_button_zoom_in"
            android:src="@drawable/ic_zoom_in_24dp"
            app:backgroundTint="@color/location_button_background"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/zoom_out_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/location_button_icon" />

        <!-- GROUPS -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
