<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <DatePicker
            android:id="@+id/track_query_start_date"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:translationX="-45dp"
            android:translationY="-30dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />

        <TimePicker
            android:id="@+id/track_query_start_time"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:translationX="-150dp"
            android:translationY="-30dp"
            android:timePickerMode="spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/track_query_start_date"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />

        <DatePicker
            android:id="@+id/track_query_end_date"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:translationX="-45dp"
            android:translationY="-100dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintTop_toBottomOf="@+id/track_query_start_date"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />

        <TimePicker
            android:id="@+id/track_query_end_time"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:translationX="-150dp"
            android:translationY="-100dp"
            android:timePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@+id/track_query_start_time"
            app:layout_constraintStart_toEndOf="@+id/track_query_start_date"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/track_query_end_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/descr_map_last_track"
            >

        </org.osmdroid.views.MapView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoom_out_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="70dp"
            android:contentDescription="@string/descr_button_zoom_out"
            android:src="@drawable/ic_zoom_out_24dp"
            app:backgroundTint="@color/location_button_background"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/location_button_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoom_in_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/descr_button_zoom_in"
            android:src="@drawable/ic_zoom_in_24dp"
            app:backgroundTint="@color/location_button_background"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/zoom_out_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/location_button_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- BOTTOM SHEET -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/statistics_sheet"
        android:layout_width="@dimen/bottom_sheet_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_statistics_background"
        app:behavior_hideable="false"
        app:behavior_peekHeight="54dp"
        app:gestureInsetBottomIgnored="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- STATISTICS -->
            <include layout="@layout/track_statistics" />

        </ScrollView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>